@@ -16,11 +16,9 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.ObjectWriter;
 import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.fasterxml.jackson.databind.node.ObjectNode;
-import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
 import com.google.common.base.Charsets;
 import com.google.common.base.Preconditions;
 import io.airbyte.commons.jackson.MoreMappers;
-import io.airbyte.commons.stream.MoreStreams;
 import java.io.File;
 import java.io.IOException;
 import java.util.Arrays;
@@ -33,18 +31,28 @@ import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Optional;
 import java.util.Set;
+import java.util.Spliterator;
+import java.util.Spliterators;
 import java.util.function.BiConsumer;
-import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
 
+/**
+ * Shared code for operating on JSON in java.
+ */
 @SuppressWarnings({"PMD.AvoidReassigningParameters", "PMD.AvoidCatchingThrowable"})
 public class Jsons {
 
   // Object Mapper is thread-safe
   private static final ObjectMapper OBJECT_MAPPER = MoreMappers.initMapper();
-
-  private static final ObjectMapper YAML_OBJECT_MAPPER = MoreMappers.initYamlMapper(new YAMLFactory());
   private static final ObjectWriter OBJECT_WRITER = OBJECT_MAPPER.writer(new JsonPrettyPrinter());
 
+  /**
+   * Serialize an object to a JSON string.
+   *
+   * @param object to serialize
+   * @param <T> type of object
+   * @return object as JSON string
+   */
   public static <T> String serialize(final T object) {
     try {
       return OBJECT_MAPPER.writeValueAsString(object);
@@ -53,6 +61,14 @@ public class Jsons {
     }
   }
 
+  /**
+   * Deserialize a JSON string to an object with a type.
+   *
+   * @param jsonString to deserialize
+   * @param klass of object
+   * @param <T> type of object
+   * @return deserialized string as type declare in klass
+   */
   public static <T> T deserialize(final String jsonString, final Class<T> klass) {
     try {
       return OBJECT_MAPPER.readValue(jsonString, klass);
@@ -61,6 +77,14 @@ public class Jsons {
     }
   }
 
+  /**
+   * Deserialize a JSON string to an object with a type.
+   *
+   * @param jsonString to deserialize
+   * @param valueTypeRef of object
+   * @param <T> type of object
+   * @return deserialized string as type declare in valueTypeRef
+   */
   public static <T> T deserialize(final String jsonString, final TypeReference<T> valueTypeRef) {
     try {
       return OBJECT_MAPPER.readValue(jsonString, valueTypeRef);
@@ -69,6 +93,14 @@ public class Jsons {
     }
   }
 
+  /**
+   * Deserialize a JSON file to an object with a type.
+   *
+   * @param file containing JSON to deserialize
+   * @param klass of object
+   * @param <T> type of object
+   * @return deserialized string as type declare in klass
+   */
   public static <T> T deserialize(final File file, final Class<T> klass) {
     try {
       return OBJECT_MAPPER.readValue(file, klass);
@@ -77,6 +109,14 @@ public class Jsons {
     }
   }
 
+  /**
+   * Deserialize a JSON file to an object with a type.
+   *
+   * @param file containing JSON to deserialize
+   * @param valueTypeRef of object
+   * @param <T> type of object
+   * @return deserialized string as type declare in klass
+   */
   public static <T> T deserialize(final File file, final TypeReference<T> valueTypeRef) {
     try {
       return OBJECT_MAPPER.readValue(file, valueTypeRef);
@@ -85,10 +125,12 @@ public class Jsons {
     }
   }
 
-  public static <T> T convertValue(final Object object, final Class<T> klass) {
-    return OBJECT_MAPPER.convertValue(object, klass);
-  }
-
+  /**
+   * Deserialize a JSON string to a {@link JsonNode}.
+   *
+   * @param jsonString to deserialize
+   * @return JSON as JsonNode
+   */
   public static JsonNode deserialize(final String jsonString) {
     try {
       return OBJECT_MAPPER.readTree(jsonString);
@@ -97,14 +139,13 @@ public class Jsons {
     }
   }
 
-  public static <T> Optional<T> tryDeserialize(final String jsonString, final Class<T> klass) {
-    try {
-      return Optional.of(OBJECT_MAPPER.readValue(jsonString, klass));
-    } catch (final Throwable e) {
-      return Optional.empty();
-    }
-  }
-
+  /**
+   * Deserialize a JSON string to a {@link JsonNode}. If not possible, return empty optional.
+   *
+   * @param jsonString to deserialize
+   * @return JSON as JsonNode wrapped in an Optional. If deserialization fails, returns an empty
+   *         optional.
+   */
   public static Optional<JsonNode> tryDeserialize(final String jsonString) {
     try {
       return Optional.of(OBJECT_MAPPER.readTree(jsonString));
@@ -113,30 +154,79 @@ public class Jsons {
     }
   }
 
+  /**
+   * Convert an object to {@link JsonNode}.
+   *
+   * @param object to convert
+   * @param <T> type of input object
+   * @return object as JsonNode
+   */
   public static <T> JsonNode jsonNode(final T object) {
     return OBJECT_MAPPER.valueToTree(object);
   }
 
-  public static JsonNode jsonNodeFromFile(final File file) throws IOException {
-    return YAML_OBJECT_MAPPER.readTree(file);
-  }
-
+  /**
+   * Create an empty JSON object as JsonNode.
+   *
+   * @return empty JSON object as JsonNode
+   */
   public static JsonNode emptyObject() {
     return jsonNode(Collections.emptyMap());
   }
 
+  /**
+   * Create an empty Jackson array node.
+   *
+   * @return an empty Jackson array node
+   */
   public static ArrayNode arrayNode() {
     return OBJECT_MAPPER.createArrayNode();
   }
 
+  /**
+   * Convert a java object into a typed JSON object.
+   *
+   * @param object to convert
+   * @param klass to convert to
+   * @param <T> type of class
+   * @return object converted to class
+   */
+  public static <T> T convertValue(final Object object, final Class<T> klass) {
+    return OBJECT_MAPPER.convertValue(object, klass);
+  }
+
+  /**
+   * Convert a JsonNode object into a typed JSON object.
+   *
+   * @param jsonNode to convert
+   * @param klass to convert to
+   * @param <T> type of class
+   * @return object converted to class
+   */
   public static <T> T object(final JsonNode jsonNode, final Class<T> klass) {
     return OBJECT_MAPPER.convertValue(jsonNode, klass);
   }
 
+  /**
+   * Convert a JsonNode object into a typed JSON object.
+   *
+   * @param jsonNode to convert
+   * @param typeReference to convert to
+   * @param <T> type of class
+   * @return object converted to class
+   */
   public static <T> T object(final JsonNode jsonNode, final TypeReference<T> typeReference) {
     return OBJECT_MAPPER.convertValue(jsonNode, typeReference);
   }
 
+  /**
+   * Convert a JsonNode object into a typed JSON object. Return empty optional if it fails.
+   *
+   * @param jsonNode to convert
+   * @param klass to convert to
+   * @param <T> type of class
+   * @return object converted to class wrapped in an optional. if it fails, empty optional.
+   */
   public static <T> Optional<T> tryObject(final JsonNode jsonNode, final Class<T> klass) {
     try {
       return Optional.of(OBJECT_MAPPER.convertValue(jsonNode, klass));
@@ -145,6 +235,14 @@ public class Jsons {
     }
   }
 
+  /**
+   * Convert a JsonNode object into a typed JSON object. Return empty optional if it fails.
+   *
+   * @param jsonNode to convert
+   * @param typeReference to convert to
+   * @param <T> type of class
+   * @return object converted to class wrapped in an optional. if it fails, empty optional.
+   */
   public static <T> Optional<T> tryObject(final JsonNode jsonNode, final TypeReference<T> typeReference) {
     try {
       return Optional.of(OBJECT_MAPPER.convertValue(jsonNode, typeReference));
@@ -153,11 +251,24 @@ public class Jsons {
     }
   }
 
+  /**
+   * Deep clone a JSON-compatible object (i.e. JsonNode or a class generated by json2pojo.
+   *
+   * @param object to clone
+   * @param <T> type of object
+   * @return cloned object
+   */
   @SuppressWarnings("unchecked")
   public static <T> T clone(final T object) {
     return (T) deserialize(serialize(object), object.getClass());
   }
 
+  /**
+   * Convert a {@link JsonNode} object to a byte array.
+   *
+   * @param jsonNode to convert
+   * @return json node as byte array
+   */
   public static byte[] toBytes(final JsonNode jsonNode) {
     return serialize(jsonNode).getBytes(Charsets.UTF_8);
   }
@@ -173,6 +284,12 @@ public class Jsons {
     return serialize(jsonNode).length();
   }
 
+  /**
+   * Get top-level keys of a {@link JsonNode}.
+   *
+   * @param jsonNode whose keys to extract
+   * @return top-level keys of the object
+   */
   public static Set<String> keys(final JsonNode jsonNode) {
     if (jsonNode.isObject()) {
       return Jsons.object(jsonNode, new TypeReference<Map<String, Object>>() {}).keySet();
@@ -181,10 +298,23 @@ public class Jsons {
     }
   }
 
+  /**
+   * Get children of top-level {@link JsonNode}.
+   *
+   * @param jsonNode whose children to extract
+   * @return children of top-level object
+   */
   public static List<JsonNode> children(final JsonNode jsonNode) {
-    return MoreStreams.toStream(jsonNode.elements()).collect(Collectors.toList());
+    return StreamSupport.stream(Spliterators.spliteratorUnknownSize(jsonNode.elements(), Spliterator.ORDERED), false)
+        .toList();
   }
 
+  /**
+   * Convert a JSON object to a string with each key / value on one line.
+   *
+   * @param jsonNode to convert
+   * @return pretty string representation of the JSON.
+   */
   public static String toPrettyString(final JsonNode jsonNode) {
     try {
       return OBJECT_WRITER.writeValueAsString(jsonNode) + "\n";
@@ -193,35 +323,89 @@ public class Jsons {
     }
   }
 
-  public static JsonNode navigateTo(JsonNode node, final List<String> keys) {
+  /**
+   * Get the {@link JsonNode} at a location in a {@link JsonNode} object.
+   *
+   * @param json to navigate
+   * @param keys keys to follow to a value
+   * @return value at location specified by keys
+   */
+  public static JsonNode navigateTo(JsonNode json, final List<String> keys) {
     for (final String key : keys) {
-      node = node.get(key);
+      json = json.get(key);
     }
-    return node;
+    return json;
   }
 
+  /**
+   * Replace a value in a {@link JsonNode} with a {@link JsonNode}. This mutates the input object!
+   *
+   * @param json to mutate
+   * @param keys path to mutation location
+   * @param replacement new value to be place at location
+   */
   public static void replaceNestedValue(final JsonNode json, final List<String> keys, final JsonNode replacement) {
     replaceNested(json, keys, (node, finalKey) -> node.put(finalKey, replacement));
   }
 
+  /**
+   * Replace a value in a {@link JsonNode} with a string. This mutates the input object!
+   *
+   * @param json to mutate
+   * @param keys path to mutation location
+   * @param replacement new value to be place at location
+   */
   public static void replaceNestedString(final JsonNode json, final List<String> keys, final String replacement) {
     replaceNested(json, keys, (node, finalKey) -> node.put(finalKey, replacement));
   }
 
+  /**
+   * Replace a value in a {@link JsonNode} with an int. This mutates the input object!
+   *
+   * @param json to mutate
+   * @param keys path to mutation location
+   * @param replacement new value to be place at location
+   */
   public static void replaceNestedInt(final JsonNode json, final List<String> keys, final int replacement) {
     replaceNested(json, keys, (node, finalKey) -> node.put(finalKey, replacement));
   }
 
+  /**
+   * Replace a value in a {@link JsonNode} with a string using a function that takes in the current
+   * value and outputs a new value. This mutates the input object!
+   *
+   * @param json to mutate
+   * @param keys path to mutation location
+   * @param typedReplacement function that takes in the old value and outputs the new string value
+   */
   private static void replaceNested(final JsonNode json, final List<String> keys, final BiConsumer<ObjectNode, String> typedReplacement) {
     Preconditions.checkArgument(!keys.isEmpty(), "Must pass at least one key");
     final JsonNode nodeContainingFinalKey = navigateTo(json, keys.subList(0, keys.size() - 1));
     typedReplacement.accept((ObjectNode) nodeContainingFinalKey, keys.get(keys.size() - 1));
   }
 
+  /**
+   * Get the {@link JsonNode} at a location in a {@link JsonNode} object. Empty optional if no value
+   * at the specified location.
+   *
+   * @param json object to navigate
+   * @param keys keys to follow to a value
+   * @return value at location specified by keys wrapped in an optional. if no value there, empty
+   *         optional.
+   */
   public static Optional<JsonNode> getOptional(final JsonNode json, final String... keys) {
     return getOptional(json, Arrays.asList(keys));
   }
 
+  /**
+   * Get the {@link JsonNode} at a location in a {@link JsonNode} object. Empty optional if no value
+   * at the specified location.
+   *
+   * @param json object to navigate
+   * @param keys keys to follow to a value
+   * @return value at location specified by keys wrapped in an optional. if no value there, empty
+   *         optional.
+   */
   public static Optional<JsonNode> getOptional(JsonNode json, final List<String> keys) {
     for (final String key : keys) {
       if (json == null) {
@@ -234,19 +418,55 @@ public class Jsons {
     return Optional.ofNullable(json);
   }
 
+  /**
+   * Get the {@link String} at a location in a {@link JsonNode} object. Returns null, if no value at
+   * the specified location.
+   *
+   * @param json object to navigate
+   * @param keys keys to follow to a value
+   * @return string value at location specified by keys wrapped in an optional. if no value there,
+   *         empty optional.
+   */
   public static String getStringOrNull(final JsonNode json, final String... keys) {
     return getStringOrNull(json, Arrays.asList(keys));
   }
 
+  /**
+   * Get the {@link String} at a location in a {@link JsonNode} object. Returns null, if no value at
+   * the specified location.
+   *
+   * @param json object to navigate
+   * @param keys keys to follow to a value
+   * @return string value at location specified by keys wrapped in an optional. if no value there,
+   *         empty optional.
+   */
   public static String getStringOrNull(final JsonNode json, final List<String> keys) {
     final Optional<JsonNode> optional = getOptional(json, keys);
     return optional.map(JsonNode::asText).orElse(null);
   }
 
+  /**
+   * Get the int at a location in a {@link JsonNode} object. Returns 0 if no value at the specified
+   * location.
+   *
+   * @param json object to navigate
+   * @param keys keys to follow to a value
+   * @return value at location specified by keys wrapped in an optional. if no value there or it is
+   *         not an int, returns 0.
+   */
   public static int getIntOrZero(final JsonNode json, final String... keys) {
     return getIntOrZero(json, Arrays.asList(keys));
   }
 
+  /**
+   * Get the int at a location in a {@link JsonNode} object. Returns 0 if no value at the specified
+   * location.
+   *
+   * @param json object to navigate
+   * @param keys keys to follow to a value
+   * @return value at location specified by keys wrapped in an optional. if no value there or it is
+   *         not an int, returns 0.
+   */
   public static int getIntOrZero(final JsonNode json, final List<String> keys) {
     final Optional<JsonNode> optional = getOptional(json, keys);
     return optional.map(JsonNode::asInt).orElse(0);
@@ -326,6 +546,12 @@ public class Jsons {
         Entry::getValue)));
   }
 
+  /**
+   * Convert a {@link JsonNode} as a string-to-string map.
+   *
+   * @param json to convert
+   * @return json as string-to-string map
+   */
   public static Map<String, String> deserializeToStringMap(JsonNode json) {
     return OBJECT_MAPPER.convertValue(json, new TypeReference<>() {});
   }
